--- a/javascript/ejemplo07-nodejs/.vscode/launch.json
+++ b/javascript/ejemplo07-nodejs/.vscode/launch.json
@@ -1,44 +1,35 @@
 {
+    // Use IntelliSense to learn about possible Node.js debug attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Ejemplo 01 - entrada",
             "type": "node",
             "request": "launch",
+            "name": "ejemplo-01-nodejs-base.js",
             "program": "${workspaceRoot}/ejemplo-01-nodejs-base.js",
-            "stopOnEntry": false,
-            "args": [],
-            "cwd": "${workspaceRoot}",
-            "preLaunchTask": null,
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "console": "internalConsole",
-            "sourceMaps": false,
-            "outFiles": []
-        },{
-            "name": "Ejemplo 02 - fileSystem sincrono",
+            "cwd": "${workspaceRoot}"
+        },
+        {
             "type": "node",
             "request": "launch",
+            "name": "ejemplo-02-require.js",
             "program": "${workspaceRoot}/ejemplo-02-require.js",
-            "stopOnEntry": false,
-            "args": ["ejemplo-02-require.js"],
             "cwd": "${workspaceRoot}",
-            "preLaunchTask": null,
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-                "--nolazy"
-            ],
-            "env": {
-                "NODE_ENV": "development"
-            },
-            "console": "internalConsole",
-            "sourceMaps": false,
-            "outFiles": []
+            "args": [
+                "ejemplo-01-nodejs-base.js"
+            ]
+        },{
+            "type": "node",
+            "request": "launch",
+            "name": "ejemplo-03-async.js",
+            "program": "${workspaceRoot}/ejemplo-03-async.js",
+            "cwd": "${workspaceRoot}",
+            "args": [
+                "ejemplo-01-nodejs-base.js_falso"
+            ]
         }
+        
     ]
 }
