--- a/javascript/ejemplo07-nodejs/.vscode/launch.json
+++ b/javascript/ejemplo07-nodejs/.vscode/launch.json
@@ -38,7 +38,18 @@
             "args": [
                 ".",".js"
             ]
+        },{
+            "type": "node",
+            "request": "launch",
+            "name": "ejemplo-07-http-pipe-bl.js",
+            "program": "${workspaceRoot}/ejemplo-07-http-pipe-bl.js",
+            "cwd": "${workspaceRoot}"
+        },{
+            "type": "node",
+            "request": "launch",
+            "name": "ejemplo-08-http-async.js",
+            "program": "${workspaceRoot}/ejemplo-08-http-async.js",
+            "cwd": "${workspaceRoot}"
         }
-        
     ]
 }
