--- a/javascript/ejemplo09-mongoose/.vscode/launch.json
+++ b/javascript/ejemplo09-mongoose/.vscode/launch.json
@@ -22,6 +22,12 @@
             "name": "ejemplo03statics",
             "program": "${workspaceRoot}\\ejemplo03statics.js",
             "cwd": "${workspaceRoot}"
+        },{
+            "type": "node",
+            "request": "launch",
+            "name": "ejemplo05validate",
+            "program": "${workspaceRoot}\\ejemplo05validate.js",
+            "cwd": "${workspaceRoot}"
         }
     ]
 }
